Resolved various UI issues. - AccordionCard automatically adjusts size to screen height - White text on searchbar buttons is now controlled by Bulma's Navbar component - Advanced search behaves as columns on mobile - Last and first snippet of page navigation instantly jumps to relevant snippet instead of smooth scrolling (better UX) - Mobile contents table more aligned with desktop version - Clean up in display snippets and moved id to scroll container of li-items - Layout changes to facetbar for mobile - UserOptions no longer expands beyond original limits - Clean up of main.scss and added #navbar - Reduced z-index of tooltip to 10 - Added advancedsearch scss file and Bulma navbar component styling for buttons underneath searchbar - Tweaks to DisplaySnippets.scss and ToC.scss to stay within limits of mobile screens

--- a/src/styles/jochre/components/ToC/_ToC.scss
+++ b/src/styles/jochre/components/ToC/_ToC.scss
@@ -6,13 +6,19 @@
 
 .table-of-contents {
   position: relative;
-  top: 0;
+  top: 2vh;
   background-color: $background-color-1;
   overflow: visible;
+  max-height: 85vh;
+
+  .accordion-card {
+    height: -webkit-fill-available;
+  }
 
   .scroll-list {
     overflow-y: scroll;
     scrollbar-width: thin;
+    height: -webkit-fill-available;
   }
 
   &.is-hidden-desktop {
@@ -21,10 +27,12 @@
 
   &.search-results {
     width: 24vw;
+    height: 76vh;
   }
 
   &.facets {
     width: 17vw;
+    height: 76vh;
   }
 
   .menu-list {
@@ -47,15 +55,17 @@
 
 .facet-list {
   overflow: auto;
-  max-height: 30vh;
+  // max-height: 30vh;
   scrollbar-width: thin;
   span > div {
     max-width: 10vw;
   }
   &.on-mobile {
+    height: 30vh;
+    overflow-y: scroll;
     span > div {
-      max-width: 20vw;
-      width: 20vw;
+      max-width: 50vw;
+      width: 50vw;
     }
   }
   // max-width: 30vw;
@@ -63,6 +73,7 @@
 
 .toc-mobile {
   background-color: $white;
+  z-index: 1;
 
   &.toc-mobile-left {
     left: 0;
@@ -100,6 +111,13 @@
   border: 0.1em solid $background-color-1;
   max-width: 70vw;
   max-height: 70vh;
+
+  &.metadata {
+    &.on-mobile {
+      height: 70vh;
+      overflow-y: scroll;
+    }
+  }
 
   .menu-list {
     max-height: 50vh;
